# monolith-wiki

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  s0_index.py
.github/workflows/: build-corpus.yml  ci.yml
assets/: style.css
config/: default.yaml  dev.yaml  domain_rules.yaml
pipeline/: __init__.py  cli.py  config.py  db.py  graph.py  hash.py  zim_reader.py
pipeline/stages/: __init__.py  s0_index.py  s0b_fetch_categories.py  s1_prefilter.py  s2_domain.py  s3_kss.py  s4_quota.py  s5_repair.py  s6_normalize.py  s7_package.py  s8_validate.py
tests/: conftest.py  test_domain.py  test_kss.py  test_normalize.py  test_prefilter.py  test_quota.py  test_repair.py  test_validate.py
